--- a/sass/components/__header.scss
+++ b/sass/components/__header.scss
@@ -185,7 +185,7 @@
 
 
     .headerD{
-        gap: 70%;
+        gap: 65%;
 
     }
 
